--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *tar.gz filter=lfs diff=lfs merge=lfs -text
 x86_64-ais-linux-gnu_sdk-buildroot.tar.gz filter=lfs diff=lfs merge=lfs -text
+x86_64-buildroot-linux-gnu_sdk-buildroot.tar.gz filter=lfs diff=lfs merge=lfs -text
