--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *tar.gz filter=lfs diff=lfs merge=lfs -text
 x86_64-ais-linux-gnu_sdk-buildroot.tar.gz filter=lfs diff=lfs merge=lfs -text
 x86_64-buildroot-linux-gnu_sdk-buildroot.tar.gz filter=lfs diff=lfs merge=lfs -text
+x86_64-buildroot-linux-uclibc_sdk-buildroot.tar.gz filter=lfs diff=lfs merge=lfs -text
